generic/apps/example/overlays/example-2/patch_simple_ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: example-2
  labels:
    name: example-2
